Update category update api
